--- a/index.html
+++ b/index.html
@@ -266,6 +266,16 @@
                             data-infinite="true" data-center-mode="true" data-lazy-load="progressive"
                             data-slides-show="4" data-is-thumbs="true" data-nav-for="#carouselCus1">
                             <div class="js-slide g-px-10">
+                                <img class="img-fluid g-cursor-pointer rounded" data-lazy="imgs/EMU-SP-1.jpeg"
+                                    alt="Image description" />
+                            </div>
+
+                            <div class="js-slide g-px-10">
+                                <img class="img-fluid g-cursor-pointer rounded" data-lazy="imgs/EMU-TP-1.jpeg"
+                                    alt="Image description" />
+                            </div>
+
+                            <div class="js-slide g-px-10">
                                 <img class="img-fluid g-cursor-pointer rounded" data-lazy="imgs/carrossel-1.jpeg"
                                     alt="Image description" />
                             </div>
