--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                         <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
                             <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15"
-                                href="https://dash.simemap.com/home/devices">Entrar</a>
+                                href="https://newdash.simemap.com/">Entrar</a>
                         </div>
 
                     </div>
@@ -197,10 +197,10 @@
         <hr class="g-brd-gray-light-v4 my-0" />
 
         <!-- Our Environment -->
+        <!-- Carousel -->
         <section class="g-py-100">
             <div class="container">
                 <div class="row">
-                    <!-- Carousel -->
                     <div class="col-lg-6 g-mb-50 g-mb-0--lg">
                         <div id="carouselCus1" class="js-carousel text-center g-mb-20" data-infinite="true"
                             data-lazy-load="progressive"
@@ -211,11 +211,31 @@
 
                             <div class="js-slide">
                                 <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
+                                    href="imgs/EMU-SP-1.jpeg" title="Lightbox Gallery"
+                                    data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
+                                    data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
+                                    <img class="img-fluid w-100 rounded" data-lazy="imgs/EMU-SP-1.jpeg"
+                                        alt="EMU-SP - Monitoramento monofásico" width="600" height="450" />
+                                </a>
+                            </div>
+
+                            <div class="js-slide">
+                                <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
+                                    href="imgs/EMU-TP-1.jpeg" title="Lightbox Gallery"
+                                    data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
+                                    data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
+                                    <img class="img-fluid w-100 rounded" data-lazy="imgs/EMU-TP-1.jpeg"
+                                        alt="EMU-TP - Monitoramento trifásico" width="600" height="450" />
+                                </a>
+                            </div>
+
+                            <div class="js-slide">
+                                <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
                                     href="imgs/carrossel-1.jpeg" title="Lightbox Gallery"
                                     data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
                                     data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
                                     <img class="img-fluid w-100 rounded" data-lazy="imgs/carrossel-1.jpeg"
-                                        alt="Image description" width="600" height="450" />
+                                        alt="SCU - Automação de portas" width="600" height="450" />
                                 </a>
                             </div>
 
@@ -264,7 +284,7 @@
 
                         <div id="carouselCus2" class="js-carousel text-center u-carousel-v3 g-mx-minus-10"
                             data-infinite="true" data-center-mode="true" data-lazy-load="progressive"
-                            data-slides-show="4" data-is-thumbs="true" data-nav-for="#carouselCus1">
+                            data-slides-show="6" data-is-thumbs="true" data-nav-for="#carouselCus1">
                             <div class="js-slide g-px-10">
                                 <img class="img-fluid g-cursor-pointer rounded" data-lazy="imgs/EMU-SP-1.jpeg"
                                     alt="Image description" />
@@ -570,6 +590,42 @@
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
                                     <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover"
+                                        href="#">Marca registrada</a>
+                                </h3>
+                                <p>
+                                    A marca Simemap está agora registrada no INPI!
+                                </p>
+                            </div>
+
+                            <div class="media g-font-size-12 g-brd-top g-brd-gray-light-v4 g-pa-15-30">
+                                <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
+                                    src="assets/img-temp/100x100/img5.jpg" alt="Image description" />
+                                <div class="media-body align-self-center">
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Marcus
+                                        André</a>
+                                </div>
+
+                                <div class="align-self-center">
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover g-mr-10" href="#">
+                                        <i class="icon-bubbles g-color-gray-dark-v5 g-pos-rel g-top-1 mr-1"></i>
+                                        1
+                                    </a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">
+                                        <i class="icon-eye g-color-gray-dark-v5 g-pos-rel g-top-1 mr-1"></i>
+                                        18
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                        <!-- End Article -->
+                    </div>
+
+                    <div class="col-lg-4 g-mb-30 g-mb-0--lg">
+                        <!-- Article -->
+                        <article class="u-shadow-v11 rounded">
+                            <div class="g-pa-30">
+                                <h3 class="g-font-weight-300 g-mb-15">
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover"
                                         href="#">Implementação de Criptografia no LoRa</a>
                                 </h3>
                                 <p>
@@ -711,8 +767,8 @@
                             </h2>
                         </div>
                         <p>
-                            A Simemap é uma startup que desenvolve seus próprios produtos,
-                            incluindo Hardware e Software com ferramentas modernas de IoT.
+                            A Simemap é uma startup que desenvolve seus próprios produtos IoT,
+                            incluindo Hardware e Software com ferramentas modernas de computação em nuvem AWS.
                             Seja para instalações residenciais ou não-residenciais, você pode monitorar
                             e controlar seus equipamentos a partir do seu smartphone ou computador pessoal.
                         </p>
@@ -843,7 +899,7 @@
                                 </div>
                                 <p class="mb-0">
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
-                                        href="mailto:info@htmlstream.com">simemap@simemap.com</a>
+                                        href="mailto:simemap@simemap.com">simemap@simemap.com</a>
                                     <br />
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
                                         href="#">www.simemap.com</a>
@@ -864,7 +920,7 @@
                 <div class="row">
                     <div class="col-md-8 text-center text-md-left g-mb-10 g-mb-0--md">
                         <div class="d-lg-flex">
-                            <small class="d-block g-font-size-default g-mr-10 g-mb-10 g-mb-0--md">2020 &copy; Todos os
+                            <small class="d-block g-font-size-default g-mr-10 g-mb-10 g-mb-0--md">2022 &copy; Todos os
                                 direitos reservados.</small>
                             <ul class="u-list-inline">
                                 <li class="list-inline-item">
