HTML texto: `nossos produtos`

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <div class="u-heading-v2-3--bottom g-brd-primary g-mb-30">
                                 <h2
                                     class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                                    Alguns produtos já disponíveis:
+                                    Nossos Produtos:
                                 </h2>
                             </div>
                             <p class="g-font-size-16">
