Google Analytics simemap-analytics-web-flux
<!-- Global site tag (gtag.js) - Google Analytics simemap-analytics-web-flux https://analytics.google.com/analytics/web/provision/?authuser=2#/a222104176p305921021/admin/streams/table/

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics simemap-analytics-web-flux https://analytics.google.com/analytics/web/provision/?authuser=2#/a222104176p305921021/admin/streams/table/-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YW4DYFEGCM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YW4DYFEGCM');
+    </script>
+
     <!-- Favicon -->
     <link rel="shortcut icon" href="../../favicon.ico" />
     <!-- Google Fonts -->
