--- a/index_us.html
+++ b/index_us.html
@@ -92,7 +92,7 @@
 
                                 <!-- Contatos -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                                    <a href="index.html" class="nav-link g-py-7 g-px-0">CONTATOS</a>
+                                    <a href="index.html" class="nav-link g-py-7 g-px-0">CONTACT</a>
                                 </li>
                                 <!-- Fim Contatos -->
 
@@ -138,10 +138,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h3 class="g-color-white g-font-weight-400 g-font-size-40 g-line-height-1_2 mb-4">
-                            Eficiência Energética<br /> IoT a serviço da natureza
+                            Energy Efficiency<br /> IoT at the service of nature
                         </h3>
-                        <span class="d-block g-font-size-16 mb-5"><mark class="g-bg-primary g-color-white">Otimização do
-                                uso energético</mark></span>
+                        <span class="d-block g-font-size-16 mb-5">
+                            <mark class="g-bg-primary g-color-white">
+                                Optimization of energy usage
+                            </mark>
+                        </span>
                     </div>
                 </div>
             </div>
