--- a/index_us.html
+++ b/index_us.html
@@ -113,11 +113,10 @@
                         <!-- End Navigation -->
 
                         <!-- botão entrar -->
-
-                        <!-- <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
+                        <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
                             <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15"
-                                href="https://newdash.simemap.com/">Entrar</a>
-                        </div> -->
+                                href="https://newdash.simemap.com/">Enter</a>
+                        </div>
                         <!-- End botão entrar -->
                     </div>
                 </nav>
